Bring back most of the pico2 code
So far it compiles and manages a few lines of debug output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,22 @@ cmake_minimum_required(VERSION 3.13.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-
+if(PICO_SDK_PATH OR PICO_SDK_FETCH_FROM_GIT)
+  include(pico_sdk_import.cmake)
+endif()
 
 project(ProbablyAverageComputorEmulator)
+
+if(PICO_SDK_PATH) # set by import file
+  set(IS_PICO true)
+  pico_sdk_init()
+
+  if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
+    set(IS_PICO2 true)
+  else()
+    message(FATAL_ERROR "This is not building on an RP2040")
+  endif()
+endif()
 
 
 if(MSVC)
@@ -17,13 +30,21 @@ endif()
 
 include(CMakeDependentOption)
 cmake_dependent_option(BUILD_SDL "Build minimal SDL UI" ON "NOT IS_PICO" OFF)
+cmake_dependent_option(BUILD_PICO2 "Build Pico 2 UI" ON "IS_PICO2" OFF)
 
 add_subdirectory(core)
+
+if(IS_PICO)
+  add_subdirectory(pico-shared)
+endif()
 
 if(BUILD_SDL)
   add_subdirectory(minsdl)
 endif()
 
+if(BUILD_PICO2)
+  add_subdirectory(pico2)
+endif()
 
 # setup release packages
 set(PROJECT_DISTRIBS LICENSE README.md)
