--- a/pico2/CMakeLists.txt
+++ b/pico2/CMakeLists.txt
@@ -55,6 +55,7 @@ target_compile_definitions(PACEPico2 PRIVATE PICO_EMBED_XIP_SETUP=1)
 target_include_directories(PACEPico2 PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 # PIO headers
+pico_generate_pio_header(PACEPico2 ${CMAKE_CURRENT_LIST_DIR}/clock.pio)
 pico_generate_pio_header(PACEPico2 ${CMAKE_CURRENT_LIST_DIR}/dpi.pio)
 pico_generate_pio_header(PACEPico2 ${CMAKE_CURRENT_LIST_DIR}/i2s.pio)
 
@@ -63,7 +64,7 @@ set_target_properties(PACEPico2 PROPERTIES PICO_TARGET_LINKER_SCRIPT ${CMAKE_CUR
 pico_add_link_depend(PACEPico2 ${CMAKE_CURRENT_LIST_DIR}/memmap.ld)
 
 # usual setup
-target_link_libraries(PACEPico2 PACECore PACEPicoShared PACEPicoBIOS hardware_dma hardware_riscv_platform_timer hardware_spi pico_multicore pico_stdlib)
+target_link_libraries(PACEPico2 PACECore PACEPicoShared PACEPicoBIOS hardware_dma hardware_spi pico_multicore pico_stdlib)
 
 pico_enable_stdio_uart(PACEPico2 1)
 pico_add_extra_outputs(PACEPico2)
