Attempt to restore pico action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,13 @@ jobs:
             name: Windows
             release-suffix: WIN64
 
-          #- os: ubuntu-24.04
-          #  name: RP2350 Stamp XL
-          #  cache-key: stamp-xl
-          #  release-suffix: RP2350StampXL
-          #  cmake-args: -DPICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk -DPICO_BOARD=solderparty_rp2350_stamp_xl
-          #  apt-packages: gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib
-          #  is-pico: true
+          - os: ubuntu-24.04
+            name: RP2350 Stamp XL
+            cache-key: stamp-xl
+            release-suffix: RP2350StampXL
+            cmake-args: -DPICO_SDK_PATH=$GITHUB_WORKSPACE/pico-sdk -DPICO_BOARD=solderparty_rp2350_stamp_xl
+            apt-packages: gcc-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib
+            is-pico: true
 
     runs-on: ${{matrix.os}}
 
@@ -64,12 +64,11 @@ jobs:
         version: 3-latest
         build-type: Release
 
-    # grab a BIOS
-    # some things don't quite work with this one, but at least we can compile
-    #- name: Download BIOS
-    #  if: matrix.is-pico
-    #  working-directory: main
-    #  run: wget -O bios-xt.rom https://github.com/skiselev/8088_bios/blob/v1.0.0/binaries/bios-xt.bin
+    # build BIOS
+    - name: Build SeaBIOS
+      if: matrix.is-pico
+      working-directory: main
+      run: ci/build-seabios.sh
 
     # Set up the cmake build environment
     - name: Create Build Environment
